deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: wil-playground
        [cite_start]image: wil42/playground:v1 # spp verdion 1 [cite: 471, 476]
        ports:
        - [cite_start]containerPort: 8888 # app port [cite: 478]

---
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-svc
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
